# tankensetto

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  tools.mk
tankensetto/: extractors.py  info.py  tankensetto.py  tools.py  util.py
tankensetto/assets/: mon_sprites.py
tankensetto/constants/: narc_path.py  pokemon.py
tankensetto/tools/: __init__.py  gfx.py  narc.py  nds.py
