[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tankensetto"
version = "0.1.0"
description = "A collection of utilities for extracting assets from Generation 4 Pokémon games into decompilation projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich==13.9.*",
    "click==8.1.*",
]

[project.optional-dependencies]
develop = [
    "ruff==0.6.*",
]

[project.scripts]
tankensetto = "tankensetto.tankensetto:main"
